[package]
name = "abus"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Dbus implementation"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/tailwags/abus"
include = ["src/**/*.rs", "README.md", "LICENSE"]


[dependencies]
bytes = "1.11.1"
getrandom = "0.4.2"
itoa = "1.0.17"
rustix = { version = "1.1.4", features = ["net", "process"] }
serde_core = "1.0.228"
tokio = { version = "1.50.0", features = ["net", "io-util"] }
tracing = "0.1.44"

[dev-dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
