[workspace]
exclude = ["fuzz"]

[package]
name = "abus"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "Dbus implementation"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/tailwags/abus"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
tracing = ["dep:tracing"]

[dependencies]
anchovy = "0.2.0"
bitflags = "2.11.0"
bytes = "1.11.1"
futures-util = { version = "0.3.32", default-features = false, features = [
  "sink",
] }
getrandom = "0.4.2"
itoa = "1.0.18"
pin-project-lite = "0.2.17"
rustix = { version = "1.1.4", features = ["process"] }
serde_core = "1.0.228"
tokio = { version = "1.51.1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1.18", default-features = false }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[patch.crates-io]
# anchovy = { path = "../anchovy" }
# anchovy = { git = "https://github.com/tailwags/anchovy" }
