[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@matilde.pet>"]
repository = "https://github.com/tailwags/abus"

[workspace.dependencies]
abus = { path = "crates/abus", version = "0.0.3" }
anchovy = "0.2.0"
anyhow = "1.0.102"
bitflags = "2.11.0"
bytes = "1.11.1"
futures-util = { version = "0.3.32", default-features = false, features = [
  "sink",
] }
getrandom = "0.4.2"
itoa = "1.0.18"
pin-project-lite = "0.2.17"
rustix = { version = "1.1.4", features = ["process"] }
sap = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
tokio = { version = "1.51.1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1.18", default-features = false }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = { version = "0.1.44" }
tracing-subscriber = "0.3.23"

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
# anchovy = { path = "../anchovy" }
# anchovy = { git = "https://github.com/tailwags/anchovy" }
