[package]
name = "abusctl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Command-line tool for inspecting and interacting with D-Bus"
authors = ["Matilde Morrone <contact@matilde.pet>"]
repository = "https://github.com/tailwags/abus"

[[bin]]
name = "abusctl"
path = "src/main.rs"

[dependencies]
abus = { path = "..", version = "0.0.2", features = ["tracing"] }
anyhow = "1.0.102"
bytes = "1.11.1"
futures-util = { version = "0.3.32", default-features = false, features = [
  "sink",
] }
sap = "0.2.0"
tokio = { version = "1.51.1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
] }
tokio-stream = { version = "0.1.18", default-features = false }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
