[package]
name = "abusd"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "D-Bus broker daemon"
authors = ["Matilde Morrone <contact@matilde.pet>"]
repository = "https://github.com/tailwags/abus"

[[bin]]
name = "abusd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
