[package]
name = "abus"
version.workspace = true
edition.workspace = true
description = "Dbus implementation"
authors.workspace = true
repository.workspace = true
readme = "README.md"
include = ["src/**/*.rs", "README.md", "../../LICENSE"]

[features]
tracing = ["dep:tracing"]

[dependencies]
anchovy = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
itoa = { workspace = true }
pin-project-lite = { workspace = true }
rustix = { workspace = true }
serde_core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
