[package]
name = "abusctl"
version = "0.1.0"
edition.workspace = true
description = "Command-line tool for inspecting and interacting with D-Bus"
authors.workspace = true
repository.workspace = true
license = "EUPL-1.2"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "../../LICENSE-EUPL"]

[[bin]]
name = "abusctl"
path = "src/main.rs"

[dependencies]
abus = { workspace = true, features = ["tracing"] }
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
sap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
