[package]
name = "abusd"
version = "0.1.0"
edition.workspace = true
description = "D-Bus broker daemon"
authors.workspace = true
repository.workspace = true
license = "EUPL-1.2"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "../../LICENSE-EUPL"]

[[bin]]
name = "abusd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
